deploy/gke/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mantis-holo3-server
  namespace: default
  labels: { app: mantis-holo3-server }
  annotations:
    cloud.google.com/backend-config: '{"default": "mantis-holo3-server"}'
    cloud.google.com/neg: '{"ingress": true}'
spec:
  type: NodePort
  selector:
    app: mantis-holo3-server
  ports:
    - { name: http, port: 80, targetPort: 8000 }
