deploy/gke/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mantis-holo3-server
  namespace: default
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/managed-certificates: mantis-holo3-cert
    kubernetes.io/ingress.allow-http: "false"
spec:
  rules:
    - host: REPLACE_HOSTNAME
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mantis-holo3-server
                port: { number: 80 }
